# Snake_V2

./: README.md
Snake_V2/: CMakeLists.txt  resources.qrc
Snake_V2/src/: Food.cpp  Food.h  GameConstants.h  GameEngine.cpp  GameEngine.h  GameWidget.cpp  GameWidget.h  ResourceManager.cpp  ResourceManager.h  Snake.cpp  Snake.h  main.cpp
